--- a/package.json
+++ b/package.json
@@ -14,43 +14,40 @@
     "type": "git",
     "url": "git+https://github.com/Simpcyclassy/swapi-frontend-developer-test.git"
   },
-  "author": "",
+  "author": "Chioma Onyekpere",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Simpcyclassy/swapi-frontend-developer-test/issues"
   },
   "homepage": "https://github.com/Simpcyclassy/swapi-frontend-developer-test#readme",
-  "dependencies": {
-    "@zeit/next-css": "^1.0.1",
-    "babel-plugin-import": "^1.11.2",
-    "antd": "^3.15.1",
-    "faker": "^4.1.0",
-    "next": "^8.0.3",
-    "next-images": "^1.1.1",
-    "next-redux-wrapper": "^3.0.0-alpha.2",
-    "now": "^15.0.6",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "react-redux": "^7.0.1",
-    "redux": "^4.0.1",
-    "redux-saga": "^1.0.2",
-    "shallow-equal": "^1.1.0",
-    "uuid": "^3.3.2"
-  },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-import": "^1.11.0",
+    "babel-eslint": "^10.0.3",
+    "babel-plugin-import": "^1.12.2",
     "babel-plugin-inline-import": "^3.0.0",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb": "^17.1.1",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-standard": "^4.0.1",
     "next-antd-aza-less": "^1.0.2"
+  },
+  "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "antd": "^3.23.6",
+    "next": "^9.1.1",
+    "next-images": "^1.2.0",
+    "next-redux-wrapper": "^4.0.1",
+    "now": "^16.3.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.1",
+    "shallow-equal": "^1.2.0"
   }
 }
