--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Using either Vue (preferably) or React framework, build a star wars directory using [SWAPI](https://swapi.co/), which has all api endpoints required for the application.",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack-dev-server --open --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,26 +21,39 @@
   "dependencies": {
     "@babel/core": "^7.6.3",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/plugin-transform-arrow-functions": "^7.2.0",
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.5",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.15",
+    "random": "^2.1.1",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
+    "react-loader": "^2.4.5",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "simplestorage.js": "^0.2.1",
+    "slugify": "^1.3.5",
     "style-loader": "^1.0.0",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.8.2"
   }
 }
